--- a/public_html/css/header-login-register.css
+++ b/public_html/css/header-login-register.css
@@ -233,7 +233,7 @@
 .header-login-signup{
 	background-color:#292c2f;
 	box-shadow:0 1px 1px #ccc;
-	padding: 20px 40px;
+	padding: 0px 40px;
 	height: 60px;
 	color: #ffffff;
 	box-sizing: border-box;
@@ -249,8 +249,8 @@
 
 .header-login-signup .header-limiter h1{
 	float: left;
-	font: normal 28px Cookie, Arial, Helvetica, sans-serif;
-	line-height: 20px;
+	font: normal 36px Cookie, Arial, Helvetica, sans-serif;
+	line-height: 60px;
 	margin: 0;
 }
 
@@ -274,7 +274,7 @@
 }
 
 .header-login-signup .header-limiter nav a{
-	font-size: 14px;
+	font-size: 18px;
 	display: inline-block;
 	padding: 0 5px;
 	opacity: 0.9;
@@ -295,7 +295,7 @@
 .header-login-signup .header-limiter ul {
 	font: 14px Arial, Helvetica, sans-serif;
 	list-style: none;
-	line-height: 0px;
+	line-height: 30px;
 	float: right;
 }
 
@@ -365,3 +365,46 @@ body {
 
 
 /** Drop Down menu**/
+.dropbtn {
+    background-color:#292c2f;
+    color: white;
+    font-size: 18px;
+    border: none;
+    padding-bottom: 8px;
+    padding-top: 12px;
+    cursor: pointer;
+    height: 60px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    left: 0;
+}
+
+.header-login-signup .header-limiter nav .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #5c6166;
+}
