--- a/public_html/css/header-login-register.css
+++ b/public_html/css/header-login-register.css
@@ -370,8 +370,8 @@ body {
     color: white;
     font-size: 18px;
     border: none;
-    padding-bottom: 8px;
-    padding-top: 12px;
+    padding-bottom: 10px;
+    padding-top: 10px;
     cursor: pointer;
     height: 60px;
 }
@@ -407,4 +407,13 @@ body {
 
 .dropdown:hover .dropbtn {
     background-color: #5c6166;
+}
+
+h1 center{
+  margin-top: 16px;
+  margin-bottom: 0px;
+  font-size: 32px;
+}
+hr{
+  margin:20px 60px 0px 60px;
 }
