--- a/public_html/css/header-login-register.css
+++ b/public_html/css/header-login-register.css
@@ -722,3 +722,47 @@ hr{
     opacity: 1;
     color:red;
   }
+
+  /** New Post **/
+
+  input[type=text], select {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+  }
+
+  input[type=submit] {
+      width: 100%;
+      background-color: #4CAF50;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+  }
+
+  input[type=submit]:hover {
+      background-color: #45a049;
+  }
+
+  div {
+      border-radius: 5px;
+      background-color: #f2f2f2;
+      padding: 20px;
+  }
+  label{
+  float:left; width:30%;
+  }
+
+  input{
+  float:left; width:60%; }
+
+  .newpost{
+  width: 30%;
+  margin-left: 100px;
+  padding: 50px 70px 70px 50px;}
