--- a/public_html/css/header-login-register.css
+++ b/public_html/css/header-login-register.css
@@ -725,7 +725,7 @@ hr{
 
   /** New Post **/
 
-  input[type=text], select {
+  .newpost input[type=text], select {
       width: 100%;
       padding: 12px 20px;
       margin: 8px 0;
@@ -735,7 +735,7 @@ hr{
       box-sizing: border-box;
   }
 
-  input[type=submit] {
+  .newpost input[type=submit] {
       width: 100%;
       background-color: #4CAF50;
       color: white;
@@ -746,20 +746,20 @@ hr{
       cursor: pointer;
   }
 
-  input[type=submit]:hover {
+  .newpost input[type=submit]:hover {
       background-color: #45a049;
   }
 
-  div {
+  .newpost div {
       border-radius: 5px;
       background-color: #f2f2f2;
       padding: 20px;
   }
-  label{
+  .newpost label{
   float:left; width:30%;
   }
 
-  input{
+  .newpost input{
   float:left; width:60%; }
 
   .newpost{
