--- a/public_html/css/header-login-register.css
+++ b/public_html/css/header-login-register.css
@@ -362,7 +362,9 @@ body {
 	margin:0;
 	padding:0;
 }
-
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto', sans-serif;
+  }
 
 /** Drop Down menu**/
 .dropbtn {
