--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -263,6 +263,7 @@
 	float: left;
 	margin: 0 0 0 60px;
 	padding: 0;
+  font-weight: bold;
 }
 
 .header-login-signup .header-limiter nav a{
@@ -325,6 +326,8 @@
 		text-align: center;
 		font-size: 24px;
 		line-height: 1;
+    font-weight: bold;
+    letter-spacing: 1.0px;
 	}
 
 	.header-login-signup .header-limiter nav {
@@ -460,6 +463,7 @@ hr{
   margin-right: 20px;
 }
 .user-container .stats .item .desc {
+  text-transform: capitalize;
   text-align: left;
   width: 100px;
   float: left;
