--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1085,3 +1085,18 @@ hr{
   float: right;
   margin-top:2px;
 }
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   height: 8%;
+   background-color: #5c6d7c;
+   color: white;
+   text-align: center;
+}
+
+.footer p {
+	padding-top: 13px;
+}
