footer properly added

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1092,7 +1092,7 @@ hr{
    bottom: 0;
    width: 100%;
    height: 8%;
-   background-color: #5c6d7c;
+   background-color: #292c2f;
    color: white;
    text-align: center;
 }
